Fixed chat room bug where the content shifted up after scrolling too much

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 .content {
   border-radius: 12px;
   width: 100vw;
-  margin: 10px auto;
+  /* height: 80vh; */
+  margin: 0 auto 10px auto;
   padding-bottom: 10vh;
 }
 
