--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,6 @@
 .header-top-row {
+  position: sticky;
+  top: 0;
   width: 100vw;
   height: 10vh;
   display: flex;
@@ -16,7 +18,6 @@
 .app-name {
   margin: 0;
   color: white;
-
 }
 
 .logo-image {
